--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_PublicLayout.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_PublicLayout.cshtml
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
 </head>
 
 <body>
