--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
@@ -3,23 +3,33 @@
     ViewData["Title"] = "Posts";
 }
 
-<section>
-    <h1>Posts</h1>
+<section class="container py-5">
+    <div class="d-flex align-items-center mb-4">
+        <h1 class="mb-3">Posts</h1>
 
-    <nav>
-        <a href="/Posts/Create">Create new post</a>
-    </nav>
+        <nav class="d-flex justify-content-center gap-3">
+            <a href="/Posts/Create" class="btn btn-primary btn-sm px-3 mx-3">
+                Create new
+            </a>
+        </nav>
+    </div>
 
-    <ul>
+    <ul class="list-group shadow-sm">
         @foreach (var post in Model)
         {
-            <li>
-                <a href="/posts/@post.Id">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="/posts/@post.Id" class="text-decoration-none fw-semibold">
                     @post.Title
                 </a>
 
-                <a href="/posts/@post.Id/edit">Edit</a>
-                <a href="/posts/@post.Id/delete">Delete</a>
+                <div class="d-flex gap-3">
+                    <a href="/posts/@post.Id/edit" class="nav-link">
+                        Edit
+                    </a>
+                    <a href="/posts/@post.Id/delete" class="nav-link text-danger">
+                        Delete
+                    </a>
+                </div>
             </li>
         }
     </ul>
