--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
@@ -1,9 +1,11 @@
-@model IReadOnlyList<CABasicCRUD.Presentation.WebMvc.Models.Posts.PostListItemViewModel>
+@using CABasicCRUD.Domain.Posts
+@model CABasicCRUD.Presentation.WebMvc.Models.Posts.PostListViewModel;
 @{
     ViewData["Title"] = "Posts";
 }
 
 <section class="container py-5">
+    @* title and button *@
     <div class="d-flex align-items-center mb-4">
         <h1 class="mb-3">Posts</h1>
 
@@ -14,8 +16,46 @@
         </nav>
     </div>
 
+    @* filter form *@
+    <form method="get" class="mb-3">
+        <div class="d-flex align-items-center gap-2 mb-3">
+            <div class="col-6">
+                <input asp-for="SearchTerm" placeholder="Search posts..." class="form-control"/>
+            </div>
+
+            <div class="col">
+                <select asp-for="OrderBy" asp-items="Html.GetEnumSelectList<PostOrderBy>()"
+                        class="form-select" onchange="this.form.submit()"></select>
+            </div>
+
+            <div class="col">
+                <select asp-for="SortDirection" asp-items="Html.GetEnumSelectList<SortDirection>()"
+                        class="form-select" onchange="this.form.submit()"></select>
+            </div>
+
+            <select asp-for="PageSize" class="form-select col" onchange="this.form.submit()">
+                <option value="10">10/page</option>
+                <option value="20">20/page</option>
+                <option value="30">30/page</option>
+            </select>
+
+            <div class="col-auto">
+                <input asp-for="Page" value="1" type="hidden" class="form-control" />
+
+                <input asp-for="PageSize" type="hidden" class="form-control" />
+
+                <button type="submit" class="btn btn-outline-primary">Filter</button>
+            </div>
+
+            
+        </div>
+
+       
+    </form>
+
+    @* list of posts *@
     <ul class="list-group shadow-sm">
-        @foreach (var post in Model)
+        @foreach (var post in Model.Posts)
         {
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="/posts/@post.Id" class="text-decoration-none fw-semibold">
