--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Landing.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Landing.cshtml
@@ -3,17 +3,19 @@
     ViewData["Title"] = "Welcome";
 }
 
-<section class="d-flex align-items-center justify-content-center">
-    <div class="p-5 text-center">
-        <h1 class="mb-3">Welcome</h1>
+<section class="p-10 flex flex-col items-center">
+    <h1 class="text-6xl">Welcome</h1>
 
-        <p class="text-muted mb-4">
-            This is the landing page.
-        </p>
+    <p class="mt-2">
+        This is the landing page.
+    </p>
 
-        <nav class="d-grid gap-2">
-            <a href="/Auth/Register" class="btn btn-primary btn-lg">Create an account</a>
-            <a href="/Auth/Login" class="btn btn-outline-secondary btn-lg">Login</a>
-        </nav>
-    </div>
+    <nav class="mt-10 flex gap-10 items-center">
+        <button class="bg-black py-2 px-4 text-gray-300 rounded-sm cursor-pointer">
+            <a href="/Auth/Register" class="">Create an account</a>
+        </button>
+        <button class="bg-white border-black border py-2 px-4 rounded-sm cursor-pointer">
+            <a href="/Auth/Login" class="">Login</a>
+        </button>
+    </nav>
 </section>
