--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_PublicLayout.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_PublicLayout.cshtml
@@ -4,36 +4,26 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
-<body class="d-flex flex-column min-vh-100">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom px-4">
-            <a href="/" class="navbar-brand fw-bold">Home</a>
-
-
-            <div class="collapse navbar-collapse show">
-                <ul class="navbar-nav ms-auto gap-2">
-
-                    <li class="nav-item">
-                        <a href="/Auth/Login" class="nav-link px-3">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/Auth/Register" class="nav-link px-3">Register</a>
-                    </li>
-                </ul>
+<body class="flex flex-col w-full min-h-screen">
+    <header class="w-full bg-black text-gray-300 px-10 py-4">
+        <nav class="flex justify-between items-center">
+            <a href="/" class=" ">Home</a>
+            <div>
+                <a href="/Auth/Login" class="nav-link px-3">Login</a>
+                <a href="/Auth/Register" class="nav-link px-3">Register</a>
             </div>
-
         </nav>
     </header>
 
-    <main class="flex-fill">
+    <main class="grow">
         @RenderBody()
     </main>
 
-    <footer class="bg-light border-top text-center py-3">
-        <small class="text-muted">&copy; @DateTime.UtcNow.Year</small>
+    <footer class="w-full bg-black text-gray-300 px-10 py-4 flex justify-center items-center">
+        <small class="">&copy; @DateTime.UtcNow.Year</small>
     </footer>
 </body>
 
