--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Login.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Login.cshtml
@@ -3,25 +3,37 @@
     ViewData["Title"] = "Login";
 }
 
+<div class="flex min-h-screen">
+    <section class="bg-gray-800 flex-1"></section>
 
-<section class="d-flex py-5 align-items-center justify-content-center">
-    <div class="card shadow-sm p-4" style="width: 100%; max-width: 420px;">
-        <h1 class="h3 mb-4 text-center">Login</h1>
+    <section class="flex-1 pt-40">
+        <div class="w-1/2 mx-auto">
+            <h1 class="text-5xl font-medium text-gray-700 mb-4">Login</h1>
 
-        <form asp-controller="Auth" asp-action="Login" method="post">
-            <div class="mb-3">
-                <label for="Email" class="form-label">Email</label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger small"></span>
-            </div>
+            <a href="/Auth/Register" class="text-gray-500 text-center">Don't have an account? Create one</a>
 
-            <div class="mb-3">
-                <label for="Password" class="form-label">Password</label>
-                <input asp-for="Password" type="password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger small"></span>
-            </div>
+            <hr class="border border-gray-300 mb-12 mt-4">
 
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
-    </div>
-</section>
+            <form asp-controller="Auth" asp-action="Login" method="post" class="flex flex-col gap-10">
+                <div class="flex flex-col gap-4">
+                    <div class="flex flex-col gap-1">
+                        <label for="Email" class="font-medium text-gray-500">Email</label>
+                        <input asp-for="Email" class="border border-gray-300 rounded-sm p-2" />
+                        <span asp-validation-for="Email" class="text-sm font-semibold text-red-600"></span>
+                    </div>
+
+                    <div class="flex flex-col gap-1">
+                        <label for="Password" class="font-medium text-gray-500">Password</label>
+                        <input asp-for="Password" type="password" class="border border-gray-300 rounded-sm p-2" />
+                        <span asp-validation-for="Password" class="text-sm font-semibold text-red-600"></span>
+                    </div>
+                </div>
+
+                <button type="submit"
+                        class="bg-gray-900 text-white py-3 rounded-sm cursor-pointer font-semibold text-sm">
+                    Login
+                </button>
+            </form>
+        </div>
+    </section>
+</div>
