--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Login.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Login.cshtml
@@ -14,6 +14,10 @@
 
             <hr class="border border-gray-300 mb-12 mt-4">
 
+            <div asp-validation-summary="ModelOnly"
+                 class="bg-red-100 text-red-700 font-semibold px-4 py-2 mb-10 rounded-sm">
+            </div>
+
             <form asp-controller="Auth" asp-action="Login" method="post" class="flex flex-col gap-10">
                 <div class="flex flex-col gap-4">
                     <div class="flex flex-col gap-1">
