--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Index.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Index.cshtml
@@ -1,22 +1,17 @@
-﻿@{
+﻿@using CABasicCRUD.Domain.Posts
+@model CABasicCRUD.Presentation.WebMvc.Models.Posts.PostListViewModel;
+
+@{
     ViewData["Title"] = "Home";
 }
 
-<section class="d-flex py-5 align-items-center justify-content-center">
-    <div class="card shadow-sm p-4 text-center" style="max-width: 480px;">
-        <h1 class="mb-3">Home</h1>
+<section class="mx-auto bg-white w-2/3 p-20 border-x border-gray-300 min-h-screen">
+    <h1 class="font-bold text-3xl mt-10">Home</h1>
 
-        <p class="text-muted mb-4">
-            You are logged in.
-        </p>
+    <nav class="mt-8">
+        <a href="/Posts">
+            <button class="bg-gray-800 text-white py-2 px-4 rounded-sm cursor-pointer text-sm">View posts</button>
+        </a>
+    </nav>
 
-        <nav class="d-flex justify-content-center gap-3">
-            <a href="/Posts" class="nav-link px-3">
-                View posts
-            </a>
-            <a href="/Posts/Create" class="nav-link px-3">
-                Create a post
-            </a>
-        </nav>
-    </div>
 </section>
