--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Delete.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Delete.cshtml
@@ -2,18 +2,27 @@
     ViewData["Title"] = "Delete Post";
 }
 
-<section class="d-flex py-5 align-items-center justify-content-center">
-    <div class="card shadow-sm p-4" style="width: 100%; max-width: 420px;">
-        <h1 class="h3 mb-4 text-center">Delete Post</h1>
 
+<section class="mx-auto bg-white w-2/3 p-20 border-x border-gray-300 min-h-screen">
+
+    <h1 class="text-3xl font-medium text-gray-700 my-10 text-center">Delete Post</h1>
+
+    <div class="flex flex-col items-center">
         <p>
             Are you sure you want to delete
             <strong>@Model.Title</strong>?
         </p>
 
-        <form method="post">
-            <button type="submit" class="btn btn-danger w-100 mb-3">Yes, delete</button>
-            <a href="/posts/@Model.Id" class="btn btn-outline-secondary w-100">Cancel</a>
-        </form>
-    </div>
-</section>
+        <form method="post" class="flex w-100 justify-between items-center mt-10">
+            <button type="submit" class="bg-red-100 text-red-700 px-4 py-2 rounded-sm font-semibold cursor-pointer">Yes,
+                delete</button>
+                <a href="/posts/@Model.Id">
+                    <button type="button"
+                            class="text-gray-700 bg-gray-100 px-4 py-2 rounded-sm font-semibold cursor-pointer">
+                        Cancel
+                    </button>
+                </a>
+            </form>
+        </div>
+
+    </section>
