feat(mvc): add users page to search users
Project: Presentation.WebMvc
Add controller action and view models.
Update sidebar and homepage to link to users index page.
Add users search page.

--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Index.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Home/Index.cshtml
@@ -8,9 +8,13 @@
 <section class="mx-auto bg-white w-2/3 p-20 border-x border-gray-300 min-h-screen">
     <h1 class="font-bold text-3xl mt-10">Home</h1>
 
-    <nav class="mt-8">
-        <a href="/Posts">
+    <nav class="mt-8 flex items-center gap-4">
+        <a href="/posts">
             <button class="bg-gray-800 text-white py-2 px-4 rounded-sm cursor-pointer text-sm">View posts</button>
+        </a>
+
+        <a href="/users">
+            <button class="bg-gray-800 text-white py-2 px-4 rounded-sm cursor-pointer text-sm">View users</button>
         </a>
     </nav>
 
