feat(mvc): add user details page
Project: Presentation.WebMvc
Controller, view model, and skeleton page added.

--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_AppLayout.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_AppLayout.cshtml
@@ -21,7 +21,7 @@
             <div class="border border-gray-400 rounded-sm p-4 w-32 h-32"></div>
             @* replace with username instead *@
             <p class="font-bold text-gray-700">
-                <a href="/Profile">
+                <a href="/users/@CurrentUser.UserId">
                     @CurrentUser.Email
                 </a>
             </p>
