--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
@@ -1,11 +1,64 @@
+@using CABasicCRUD.Application.Common.Interfaces
 @model CABasicCRUD.Presentation.WebMvc.Models.Users.UserDetailsViewModel
+@inject ICurrentUser CurrentUser
 
 @{
     ViewData["Title"] = "User";
 }
 
 
-<section class="mx-auto bg-white w-2/3 px-20 py-24 border-x border-gray-300 min-h-screen ">
-    <h1 class="font-bold text-3xl text-gray-700">@Model.Name</h1>
-    <p>@Model.Email</p>
+<section class="mx-auto bg-white w-2/3 px-20 py-24 border-x border-gray-300 min-h-screen flex flex-col gap-20">
+    <div class="flex gap-10 items-end">
+        @* replace with profile photo *@
+        <div class="border border-gray-400 rounded-sm p-4 w-64 h-64"></div>
+
+        <div class="flex flex-col gap-2 w-1/3">
+            <div class="flex items-center justify-between">
+                <h1 class="font-bold text-3xl text-gray-700">@Model.Name</h1>
+                @if (CurrentUser.UserId == Model.Id)
+                {
+                    <nav>
+                        <a href="/users/@CurrentUser.UserId/edit" class="text-gray-500 font-semibold">Update</a>
+                    </nav>
+                }
+            </div>
+
+            <p>@Model.Email</p>
+        </div>
+    </div>
+
+    <div class="flex flex-col gap 6">
+        <h2 class="font-bold text-gray-600 text-2xl">Recent posts</h2>
+
+
+        @* list of posts *@
+        <ul class="mt-10 w-3/4 flex flex-col gap-6">
+            @foreach (var post in Model.PostsList.Posts)
+            {
+                <li class="">
+                    <div class="flex items-start justify-between">
+                        <a href="/posts/@post.Id">
+                            <p class="text-gray-700 font-bold">@post.Title</p>
+                            <p class="w-2/3">@post.ContentPreview</p>
+                        </a>
+
+                        <nav class="flex gap-4">
+                            <a href="/posts/@post.Id/edit">
+                                <button
+                                    class="bg-gray-100 px-2 py-1 text-gray-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                    Edit
+                                </button>
+                            </a>
+                            <a href="/posts/@post.Id/delete">
+                                <button
+                                    class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                    Delete
+                                </button>
+                            </a>
+                        </nav>
+                    </div>
+                </li>
+            }
+        </ul>
+    </div>
 </section>
