--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Delete.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Delete.cshtml
@@ -5,24 +5,35 @@
 
 <section class="mx-auto bg-white w-2/3 p-20 border-x border-gray-300 min-h-screen">
 
-    <h1 class="text-3xl font-medium text-gray-700 my-10 text-center">Delete Post</h1>
-
-    <div class="flex flex-col items-center">
-        <p>
-            Are you sure you want to delete
-            <strong>@Model.Title</strong>?
-        </p>
-
-        <form method="post" class="flex w-100 justify-between items-center mt-10">
-            <button type="submit" class="bg-red-100 text-red-700 px-4 py-2 rounded-sm font-semibold cursor-pointer">Yes,
-                delete</button>
-                <a href="/posts/@Model.Id">
-                    <button type="button"
-                            class="text-gray-700 bg-gray-100 px-4 py-2 rounded-sm font-semibold cursor-pointer">
-                        Cancel
-                    </button>
-                </a>
-            </form>
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="flex flex-col gap-2 items-center mt-20">
+            <div asp-validation-summary="ModelOnly"
+                 class="bg-red-100 text-red-700 font-semibold px-4 py-2 mb-10 rounded-sm">
+            </div>
+            <a href="/posts" class="text-gray-600 font-medium">Back to posts</a>
         </div>
+    }
+    else
+    {
+        <h1 class="text-3xl font-medium text-gray-700 my-10 text-center">Delete Post</h1>
 
+        <div class="flex flex-col items-center">
+            <p>
+                Are you sure you want to delete
+                <strong>@Model.Title</strong>?
+            </p>
+
+            <form method="post" class="flex w-100 justify-between items-center mt-10">
+                <button type="submit" class="bg-red-100 text-red-700 px-4 py-2 rounded-sm font-semibold cursor-pointer">Yes,
+                    delete</button>
+                    <a href="/posts/@Model.Id">
+                        <button type="button"
+                                class="text-gray-700 bg-gray-100 px-4 py-2 rounded-sm font-semibold cursor-pointer">
+                            Cancel
+                        </button>
+                    </a>
+                </form>
+            </div>
+        }
     </section>
