--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Index.cshtml
@@ -1,5 +1,7 @@
+@using CABasicCRUD.Application.Common.Interfaces
 @using CABasicCRUD.Domain.Posts
-@model CABasicCRUD.Presentation.WebMvc.Models.Posts.PostListViewModel;
+@inject ICurrentUser CurrentUser
+@model CABasicCRUD.Presentation.WebMvc.Models.Posts.PostListViewModel
 @{
     ViewData["Title"] = "Posts";
 }
@@ -49,25 +51,27 @@
         {
             <li class="">
                 <div class="flex items-start justify-between">
-                    <a href="/posts/@post.Id">
+                    <a href="/posts/@post.Id" class="w-full">
                         <p class="text-gray-700 font-bold">@post.Title</p>
-                        <p class="w-2/3">@post.ContentPreview</p>
+                        <p class="w-3/4">@post.ContentPreview</p>
                     </a>
-
-                    <nav class="flex gap-4">
-                        <a href="/posts/@post.Id/edit">
-                            <button
-                                class="bg-gray-100 px-2 py-1 text-gray-700 text-sm font-semibold rounded-sm cursor-pointer">
-                                Edit
-                            </button>
-                        </a>
-                        <a href="/posts/@post.Id/delete">
-                            <button
-                                class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
-                                Delete
-                            </button>
-                        </a>
-                    </nav>
+                    @if (CurrentUser.UserId == post.UserId)
+                    {
+                        <nav class="flex gap-4">
+                            <a href="/posts/@post.Id/edit">
+                                <button
+                                    class="bg-gray-100 px-2 py-1 text-gray-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                    Edit
+                                </button>
+                            </a>
+                            <a href="/posts/@post.Id/delete">
+                                <button
+                                    class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                    Delete
+                                </button>
+                            </a>
+                        </nav>
+                    }
                 </div>
             </li>
         }
