--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Users/Details.cshtml
@@ -1,4 +1,5 @@
 @using CABasicCRUD.Application.Common.Interfaces
+@using CABasicCRUD.Domain.Posts
 @model CABasicCRUD.Presentation.WebMvc.Models.Users.UserDetailsViewModel
 @inject ICurrentUser CurrentUser
 
@@ -30,6 +31,33 @@
     <div class="flex flex-col gap 6">
         <h2 class="font-bold text-gray-600 text-2xl">Recent posts</h2>
 
+        @* filter form *@
+        <form method="get" class="mt-10 flex items-center gap-2 text-sm w-full">
+            <input asp-for="PostsList.SearchTerm" placeholder="Search posts..."
+                   class="border border-gray-300 rounded-sm p-2 w-1/2" />
+
+            <select asp-for="PostsList.OrderBy" asp-items="Html.GetEnumSelectList<PostOrderBy>()"
+                    class="border border-gray-300 rounded-sm p-2" onchange="this.form.submit()"></select>
+
+            <select asp-for="PostsList.SortDirection" asp-items="Html.GetEnumSelectList<SortDirection>()"
+                    class="border border-gray-300 rounded-sm p-2" onchange="this.form.submit()"></select>
+
+            <select asp-for="PostsList.PageSize" class="border border-gray-300 rounded-sm p-2"
+                    onchange="this.form.submit()">
+                <option value="10">10/page</option>
+                <option value="20">20/page</option>
+                <option value="30">30/page</option>
+            </select>
+
+            <div>
+                <input asp-for="PostsList.Page" value="1" type="hidden" />
+
+                <input asp-for="PostsList.PageSize" type="hidden" />
+
+                <button type="submit" class="bg-gray-800 text-white py-2 px-4 rounded-sm cursor-pointer">Filter</button>
+            </div>
+        </form>
+
 
         @* list of posts *@
         <ul class="mt-10 w-3/4 flex flex-col gap-6">
@@ -37,25 +65,27 @@
             {
                 <li class="">
                     <div class="flex items-start justify-between">
-                        <a href="/posts/@post.Id">
+                        <a href="/posts/@post.Id" class="w-full">
                             <p class="text-gray-700 font-bold">@post.Title</p>
-                            <p class="w-2/3">@post.ContentPreview</p>
+                            <p class="w-3/4">@post.ContentPreview</p>
                         </a>
-
-                        <nav class="flex gap-4">
-                            <a href="/posts/@post.Id/edit">
-                                <button
-                                    class="bg-gray-100 px-2 py-1 text-gray-700 text-sm font-semibold rounded-sm cursor-pointer">
-                                    Edit
-                                </button>
-                            </a>
-                            <a href="/posts/@post.Id/delete">
-                                <button
-                                    class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
-                                    Delete
-                                </button>
-                            </a>
-                        </nav>
+                        @if (CurrentUser.UserId == post.UserId)
+                        {
+                            <nav class="flex gap-4">
+                                <a href="/posts/@post.Id/edit">
+                                    <button
+                                        class="bg-gray-100 px-2 py-1 text-gray-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                        Edit
+                                    </button>
+                                </a>
+                                <a href="/posts/@post.Id/delete">
+                                    <button
+                                        class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                        Delete
+                                    </button>
+                                </a>
+                            </nav>
+                        }
                     </div>
                 </li>
             }
