--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Details.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Details.cshtml
@@ -11,6 +11,13 @@
     @* Post *@
     <h1 class="font-bold text-3xl text-gray-700">@Model.Title</h1>
 
+    @* author name *@
+    <a href="/users/@Model.UserId">
+        <p class="font-bold text-gray-600 mt-2"><span class="text-sm text-gray-500">written by</span>
+            @Model.Username
+        </p>
+    </a>
+
     <nav class="flex gap-6 mt-6 items-center">
         @if (Model.UserId == CurrentUser.UserId)
         {
