--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Details.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Posts/Details.cshtml
@@ -75,12 +75,25 @@
             <div class="flex flex-col gap-6">
                 @foreach (var comment in Model.Comments)
                 {
-                    <div>
-                        <p class="mb-1">@comment.Body</p>
-                        <a href="/users/@comment.UserId" class="text-sm text-gray-600 font-medium">by @comment.Username</a>
-                        <small class="text-gray-500 font-medium">
-                            at @comment.CreatedAt.ToString("g")
-                        </small>
+                    <div class="flex items-start justify-between">
+                        <div>
+                            <p class="mb-1">@comment.Body</p>
+                            <a href="/users/@comment.UserId" class="text-sm text-gray-600 font-medium">by @comment.Username</a>
+                            <small class="text-gray-500 font-medium">
+                                at @comment.CreatedAt.ToString("g")
+                            </small>
+                        </div>
+                        @if (comment.UserId == CurrentUser.UserId)
+                        {
+                            <nav>
+                                <a href="/comments/@comment.Id/delete">
+                                    <button
+                                        class="bg-red-100 px-2 py-1 text-red-700 text-sm font-semibold rounded-sm cursor-pointer">
+                                        Delete
+                                    </button>
+                                </a>
+                            </nav>
+                        }
                     </div>
                 }
             </div>
