--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Register.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Auth/Register.cshtml
@@ -24,6 +24,12 @@
                     </div>
 
                     <div class="flex flex-col gap-1">
+                        <label for="Username" class="font-medium text-gray-500">Username</label>
+                        <input asp-for="Username" class="border border-gray-300 rounded-sm p-2" />
+                        <span asp-validation-for="Username" class="text-sm font-semibold text-red-600"></span>
+                    </div>
+
+                    <div class="flex flex-col gap-1">
                         <label for="Email" class="font-medium text-gray-500">Email</label>
                         <input asp-for="Email" class="border border-gray-300 rounded-sm p-2" />
                         <span asp-validation-for="Email" class="text-sm font-semibold text-red-600"></span>
