--- a/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_AppLayout.cshtml
+++ b/src/CABasicCRUD.Presentation.WebMvc/Views/Shared/_AppLayout.cshtml
@@ -22,7 +22,7 @@
             @* replace with username instead *@
             <p class="font-bold text-gray-700">
                 <a href="/users/@CurrentUser.UserId">
-                    @CurrentUser.Email
+                    @CurrentUser.Username
                 </a>
             </p>
         </div>
